language_styles = [
  'classic.xml',
  'cobalt.xml',
  'kate.xml',
  'oblivion.xml',
  'solarized-dark.xml',
  'solarized-light.xml',
  'tango.xml',
]

install_data(
  language_styles,
  install_dir: join_paths(
    pkgdatadir,
    'styles'
  )
)

install_data(
  'styles.rng',
  install_dir: join_paths(
    pkgdatadir,
    'styles'
  )
)
