EXTRA_DIST = 			\
	language.dtd		\
	language.rng		\
	ada.lang		\
	boo.lang		\
	c.lang			\
	changelog.lang		\
	csharp.lang		\
	css.lang		\
	cpp.lang		\
	d.lang			\
	desktop.lang		\
	diff.lang		\
	fortran.lang		\
	gtkrc.lang		\
	haskell.lang		\
	html.lang		\
	idl.lang		\
	ini.lang		\
	java.lang		\
	javascript.lang		\
	latex.lang		\
	lua.lang		\
	makefile.lang		\
	msil.lang		\
	nemerle.lang		\
	octave.lang		\
	pascal.lang		\
	perl.lang		\
	php.lang		\
	po.lang			\
	python.lang		\
	R.lang			\
	ruby.lang		\
	scheme.lang		\
	sh.lang			\
	sql.lang		\
	tcl.lang		\
	texinfo.lang		\
	vbnet.lang		\
	verilog.lang		\
	vhdl.lang		\
	xml.lang

languagesdir = $(datadir)/gtksourceview-1.0/language-specs
languages_DATA = $(EXTRA_DIST)
