LANGUAGES =			\
	ada.lang		\
	boo.lang		\
	changelog.lang		\
	c.lang			\
	cpp.lang		\
	csharp.lang		\
	css.lang		\
	def.lang		\
	desktop.lang		\
	diff.lang		\
	d.lang			\
	docbook.lang		\
	dpatch.lang		\
	dtd.lang		\
	fortran.lang		\
	gap.lang		\
	gtk-doc.lang		\
	gtkrc.lang		\
	haskell.lang		\
	html.lang		\
	idl.lang		\
	ini.lang		\
	java.lang		\
	javascript.lang		\
	latex.lang		\
	libtool.lang		\
	lua.lang		\
	m4.lang			\
	makefile.lang		\
	msil.lang		\
	nemerle.lang		\
	ocaml.lang		\
	octave.lang		\
	pascal.lang		\
	perl.lang		\
	php.lang		\
	pkgconfig.lang		\
	po.lang			\
	python.lang		\
	R.lang			\
	ruby.lang		\
	scheme.lang		\
	sh.lang			\
	spec.lang		\
	sql.lang		\
	styles.rng		\
	tcl.lang		\
	texinfo.lang		\
	vbnet.lang		\
	verilog.lang		\
	vhdl.lang		\
	xml.lang		\
	yacc.lang

STYLES =			\
	gvim.xml		\
	kate.xml

languagesdir = $(datadir)/gtksourceview-2.0/language-specs
languages_DATA = $(LANGUAGES) language.rng language2.rng language.dtd \
		 check.sh convert.py

stylesdir = $(datadir)/gtksourceview-2.0/styles
styles_DATA = $(STYLES) styles.rng

EXTRA_DIST = $(languages_DATA) $(styles_DATA)
